--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^1.0",
+        "laravel-mix": "^2.1.14",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "express": "^4.16.4",
+        "ioredis": "^4.0.2",
+        "socket.io": "^2.1.1",
+        "socket.io-client": "^2.1.1"
     }
 }
